fix: build targes was wrong

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dev = [
 path = "src/quieto/__init__.py"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/debouncer"]
+packages = ["src/quieto"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
